# rules_stamp

./: .bazelrc  README.md  WORKSPACE  defs.bzl
examples/: BUILD.bazel  read_stamp.sh  rule.bzl
internal/stamp/: BUILD.bazel  defs.bzl  stamper.py
tools/stamping/: workspace_status.sh
